Roles de admin creados

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,8 @@
     <li><a href="/auth/signup">signup</a></li>
     <li><a href="/auth/login">login</a></li>
     <li><a href="/auth/logout">Logout</a></li>
-    <li><a href="secret">Secret</a></li>
+    <li><a href="/secret">Secret</a></li>
+    <li><a href="/admin/ironhack">Dashboard</a></li>
   </ul>
   {{{body}}}
 
